Fixes some problems with the split panel example. Adds an explicit height for the HorizontalSplitPanel and removes an unneeded css margin that was not necessary and caused overflow.
Review by: jgw



git-svn-id: https://google-web-toolkit.googlecode.com/svn/trunk@1158 8db76d5a-ed1c-0410-87a9-c151d255dfc7

--- a/samples/kitchensink/src/com/google/gwt/sample/kitchensink/public/KitchenSink.css
+++ b/samples/kitchensink/src/com/google/gwt/sample/kitchensink/public/KitchenSink.css
@@ -304,7 +304,6 @@ a:visited {
 
 .gwt-HorizontalSplitPanel {
 	border: 8px solid #C3D9FF;
-	margin: 8px;
 }
 
 .gwt-HorizontalSplitPanel .splitter {
